普通函数 测试通过

--- a/nagisa-rtlib/src/main/resources/com/github/nuclearg/nagisa/rtlib/lang/type.txt
+++ b/nagisa-rtlib/src/main/resources/com/github/nuclearg/nagisa/rtlib/lang/type.txt
@@ -1,9 +1,22 @@
-NATIVEFUNCTION ITOA(i AS INTEGER) AS STRING
-	"Type"
-	"itoa"
+FUNCTION ITOA(i AS INTEGER) AS STRING
+	DIM str AS STRING
+	
+	WHILE i > 0
+		LET n = i % 10		
+		LET i = i / 10
+		
+		LET str = CHR(n + ASC("0")) + str	
+	END WHILE
+	
+	RETURN str
 END FUNCTION
 
-NATIVEFUNCTION ATOI(s AS STRING) AS INTEGER
+NATIVEFUNCTION CHR(ascii AS INTEGER) AS STRING
 	"Type"
-	"atoi"
+	"chr"
+END FUNCTION
+
+NATIVEFUNCTION ASC(ch AS STRING) AS INTEGER
+	"Type"
+	"asc"
 END FUNCTION
